# modcam

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  pylock.toml  requirements.txt  vcpkg-configuration.json  version.h.in
.git-hooks/: pre-commit
.git-hooks/pre-commit.d/: jupyter-nb-warn
.github/: dependabot.yml  labeler.yml
.github/workflows/: check-format.yml  check-version.yml  ci.yml  create-bindings-issue.yml  pr-labels.yml  scorecard.yml  update-version.yml  validate-citation.yml
cmake/: modcam_dependencies.cmake  modcam_version.cmake  update_version.cmake
cmake/toolchains/: clang.cmake
data/: .clang-tidy  CMakeLists.txt
docs/: CMakeLists.txt  CONTRIBUTING.rst  Doxyfile.in  conf.py  index.rst
docs/prototypes/: README.md
docs/reference/: mesh.rst
include/modcam/: modcam_version.h
include/modcam/mesh/: concepts.h  per_vertex_basis.h  per_vertex_basis_pro2024.h  per_vertex_normals.h  per_vertex_normals_max1999.h  principal_curvature.h  principal_curvature_rus2004.h  voronoi_area.h  voronoi_area_mey2003.h
include/modcam/utility/: concepts.h  modulus.h  random_orthonormal.h
licenses/: README.md
packaging/: CMakeLists.txt  modCAMConfig.cmake
src/: .clang-tidy  CMakeLists.txt
src/modcam/: modcam_version.cpp.in
src/modcam/mesh/: CMakeLists.txt  per_vertex_basis.cpp  per_vertex_basis.test.cpp  per_vertex_normals.cpp  per_vertex_normals.test.cpp  per_vertex_normals_max1999.test.cpp  principal_curvature.cpp  principal_curvature.test.cpp  principal_curvature_rus2004.test.cpp  voronoi_area.cpp  voronoi_area.test.cpp  voronoi_area_mey2003.test.cpp
src/modcam/utility/: CMakeLists.txt  modulus.h  modulus.test.cpp  random_orthonormal.cpp  random_orthonormal.h  random_orthonormal.test.cpp
